# self_healing_agent

./: .env.example  .gitignore  README.md  bucket.py  main.py  project_setup  project_setup.py  pyproject.toml  pytest.ini  requirements.txt  test_llm_parse.py
scripts/: check_dynamic.py
src/app/: graph.py  main.py  state.py
src/app/lib/: open_file_position.py
src/app/nodes/: apply_fix.py  dom_extractor.py  file_locator.py  human_approval.py  llm_reason.py  log_reporter.py  run_test.py  xpath_builder.py
src/app/tools/: dom_extractor.py  file_editor_tool.py  open_file_at_position.py
src/app/utils/dom/: dom_utils.py  fingerprints.py  selector_resolver.py
src/app/utils/xpath/: llm_wrapper.py
src/automation/: conftest.py  pyproject.toml
src/automation/log_setup/: logger_setup.py
src/automation/pages/: cart_page.py  checkout_page.py  fill_login.py  inventory_page.py  user_credential.py
src/automation/tests/: test_cart.py  test_case.py  test_checkout.py  test_inventory.py  test_login.py
src/automation/tests/fixtures/: dynamic_page.html
src/self_healer/: __init__.py  config.py  graph.py  main.py  plugin.py  state.py
src/self_healer/nodes/: apply_fix.py  dom_extractor.py  file_locator.py  human_approval.py  llm_reason.py  rerun_engine.py  xpath_builder.py
src/self_healer/prompts/: llm_agent_prompts.py
src/self_healer/tools/: file_editor_tool.py  open_file_at_position.py
src/self_healer/utils/xpath/: dom_summarisation.py  llm_wrapper.py  post_validation.py
tmp/: ui_output.txt  verify_rich_ui.py  verify_ui.py
