[project]
name = "self-healing-automation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.2",
    "langchain==1.2.12",
    "langchain-openai==1.1.11",
    "langgraph==1.1.2",
    "langsmith==0.7.20",
    "playwright==1.58.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
]
